--- a/style.css
+++ b/style.css
@@ -334,6 +334,7 @@
     border: 1px solid #e5e5e5;
     border-radius: 3px;
     margin: 3px 5px;
+    animation: none;
 }
 #lk-content a.recall-button {   /* кнопки контента (дочерние вкладки) */
     background-color: transparent;
