--- a/assets/css/lk-button-cstmz.css
+++ b/assets/css/lk-button-cstmz.css
@@ -3,20 +3,22 @@
     border-color: rgba(var(--tclPDark),.4) !important;
 }
 .tcl_bmenu,
-.pager-item:not(.type-separator) > *,
+.rcl-bttn,
 .recall-button {
     background: var(--tclBck) !important;
     border: 2px solid var(--tclBrd) !important;
     box-shadow: none !important;
     color: var(--tclClr) !important;
+    opacity: 1;
     text-decoration: none !important;
 }
 .tcl_bmenu:hover,
 .pager-item.type-current > *,
 .pager-item a:hover,
 .recall-button:hover,
+.rcl-bttn:hover,
 .recall-button[class*="active"],
-input[type="submit"].recall-button {
+.rcl-bttn[class*="rcl-bttn__disabled"] {
     background: var(--tclBckA) !important;
     border-color: var(--tclBrdA) !important;
     color: #fff !important;
