--- a/assets/css/lk-button-lite.css
+++ b/assets/css/lk-button-lite.css
@@ -9,13 +9,13 @@ border: 1px transparent |   border-color: primary
 */
 
 .tcl_shev {
-    color: rgb(var(--tclPDark)) !important;
+    color: rgb(var(--rclRgbDark)) !important;
 }
 .recall-button,
 .rcl-bttn {
     background: transparent !important;
     border: 2px solid transparent  !important;
-    color: rgb(var(--tclPDark)) !important;
+    color: rgb(var(--rclRgbDark)) !important;
 }
 .tcl_shev:focus,
 .tcl_shev:hover,
@@ -25,7 +25,7 @@ border: 1px transparent |   border-color: primary
 .recall-button[class*="active"], /* e.g. filter-active*/
 .rcl-bttn[class*="rcl-bttn__disabled"] { 
     background: none;
-    border-color: rgba(var(--tclP),.6) !important;
+    border-color: rgba(var(--rclRgb),.6) !important;
     box-shadow: none !important;
     opacity: 1;
     text-decoration: none !important;
@@ -35,6 +35,6 @@ border: 1px transparent |   border-color: primary
 .chat-submit,
 .important-shift,
 #rcl-publish-post {
-    background: var(--tclPHex) !important;
+    background: var(--rclHex) !important;
     color: #fff !important;
 }
